--- a/src/styles/settings.scss
+++ b/src/styles/settings.scss
@@ -1,10 +1,13 @@
 $color-light: #fff;
-$color-dark: #2f3542;
-$color-success: #26de81;
-$color-warning: #e1644e;
+$color-dark: #0a3d62;
+$color-success: #b8e994;
+$color-warning: #b71540;
+$color-light2: #82ccdd;
+$color-text: #000;
 
 $font-text: 'Poppins', sans-serif;
 
 $radius: 5px;
 $base-size: 12px;
+$image-size: 128px;
 $transition: all 0.5s;
