--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -12,7 +12,7 @@ body {
   background: $color-dark;
   font-family: $font-text;
   font-size: ($base-size * 1.1);
-  color: $color-light;
+  //color: $color-dark;
   letter-spacing: 0.7px;
 }
 
